# draw_game

./: LICENSE  Makefile  README.md  build.bat  build.sh  clean.sh  game  main.c  notes.md  project.4coder  r_types.h  run.bat  run.sh  runvcvarsall.bat  todo.md
Resources/: Info.plist  gun1.icns  gun2.icns
assets/cowboyheartcontainer/: Rfaile.aseprite
assets/diegoraycowboy/: 01.aseprite
assets/surajrenuka/: Background.psd
compile/linux/: CMakeLists.txt  readme.txt
compile/macos/: cleanmac.sh  run  run.sh
compile/web/: Draw!.html  Draw!.js  Draw!.wasm  Makefile
compile/win/: build.bat  run.bat
compile/win/assets/rudy/: x.aseprite
compile/win/raylib/: raylib.lib
game.dSYM/Contents/: Info.plist
game.dSYM/Contents/Resources/DWARF/: game
references/: Makefile  build.bat  gccandTCCrun.bat  perfectMSVCsetup.bat  raylib.h  readme.txt  resources.c  run.bat
scratch/: float_math.c  testbools.c
src/: animation.c  bools.c  logic.h  resources.c  stateCore.c  stateLevel.c  stateOptions.c  stateTitle.c  tile.c
tests/: before_refactor.c  init_struct_with_value_test.c  random_float.c
